# dexec

./: AUTHORS  BUGS  COPYING  ChangeLog  LICENSE  Makefile.am  README  README.md  autogen.sh  configure.ac
build-files/: build.sh
build-files/el6/: rpm.spec
build-files/el7/: rpm.spec
po/: Makevars
src/: Makefile.am  btree.c  common.c  common.h  daemon-thread.c  daemon.c  decimal.c  decimal.h  fifo.c  fs.c  fs.h  functions-common.c  functions-common.h  functions.c  ieee754.c  ieee754.h  lib.c  lib.h  messages.c  murmur3.c  murmur3.h  network.c  sender.c  stats.c  timestamp.c  timestamp.h
src/clients/: Makefile  client.c
support-files/init.d/: mdb-dexec
support-files/logrotate.d/: mdb-dexec
support-files/rsyslog.d/: mdb-dexec.conf
support-files/sysconfig/: mdb-dexec
support-files/systemd/: mdb-dexec.service
